Mettre à jour le code du bouton

--- a/Mathématiques/introduction-aux-fonctions-mathématiques.ipynb
+++ b/Mathématiques/introduction-aux-fonctions-mathématiques.ipynb
@@ -1,1 +1,125 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["![Callysto.ca Banner](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-top.jpg?raw=true)", "\n", "\n", "<a href=\"https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcallysto%2Fcahiers-de-programmes&branch=master&subPath=/Mathe\u0301matiques/introduction-aux-fonctions-math\u00e9matiques.ipynb&depth=1\" target=\"_parent\"><img src=\"https://raw.githubusercontent.com/callysto/cahiers-de-programmes/master/bouton-callysto.svg?sanitize=true\" width=\"123\" height=\"24\" alt=\"Open in Callysto\"/></a>"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Une introduction aux fonctions en utilisant Python\n", "\n", "En math\u00e9matiques, ainsi qu'en programmation, une fonction est une op\u00e9ration qui prend une entr\u00e9e et produit une sortie.\n", "\n", "Par exemple, nous pourrions avoir une fonction qui prend un num\u00e9ro d\u2019entr\u00e9e et ajoute 2 \u00e0 celui-ci."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["def ajouter_deux(x):\n", "    return x + 2\n", "\n", "print(ajouter_deux(5))"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["def ajouter_deux(x):\n", "    return x + 2\n", "\n", "print(ajouter_deux(6))"]}, {"cell_type": "markdown", "metadata": {}, "source": ["Si, \u00e0 la place, nous avions une fonction qui multiplie par 3:"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["def multiplier_par_trois(x):\n", "    return x * 3\n", "\n", "print(multiplier_par_trois(5))\n", "print(multiplier_par_trois(6))"]}, {"cell_type": "markdown", "metadata": {}, "source": ["# Tracer la fonction\n", "\n", "Nous pouvons ajouter quelques commandes qui nous permettront de tracer la ou les fonctions."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["from matplotlib import pyplot as plt\n", "import numpy as np"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["x = np.linspace(0,10)\n", "plt.plot(ajouter_deux(x));"]}, {"cell_type": "markdown", "metadata": {}, "source": ["[![Callysto.ca License](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-bottom.jpg?raw=true)](https://github.com/callysto/curriculum-notebooks/blob/master/LICENSE.md)"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Callysto.ca Banner](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-top.jpg?raw=true)\n",
+    "\n",
+    "<a href=\"https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcallysto%2Fcahiers-de-programmes&branch=master&urlpath=notebooks/cahiers-de-programmes/Math%C3%A9matiques/introduction-aux-fonctions-math%C3%A9matiques.ipynb&depth=1\" target=\"_parent\"><img src=\"https://raw.githubusercontent.com/callysto/cahiers-de-programmes/master/bouton-callysto.svg?sanitize=true\" width=\"123\" height=\"24\" alt=\"Open in Callysto\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Une introduction aux fonctions en utilisant Python\n",
+    "\n",
+    "En mathématiques, ainsi qu'en programmation, une fonction est une opération qui prend une entrée et produit une sortie.\n",
+    "\n",
+    "Par exemple, nous pourrions avoir une fonction qui prend un numéro d’entrée et ajoute 2 à celui-ci."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajouter_deux(x):\n",
+    "    return x + 2\n",
+    "\n",
+    "print(ajouter_deux(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajouter_deux(x):\n",
+    "    return x + 2\n",
+    "\n",
+    "print(ajouter_deux(6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si, à la place, nous avions une fonction qui multiplie par 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplier_par_trois(x):\n",
+    "    return x * 3\n",
+    "\n",
+    "print(multiplier_par_trois(5))\n",
+    "print(multiplier_par_trois(6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tracer la fonction\n",
+    "\n",
+    "Nous pouvons ajouter quelques commandes qui nous permettront de tracer la ou les fonctions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0,10)\n",
+    "plt.plot(ajouter_deux(x));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Callysto.ca License](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-bottom.jpg?raw=true)](https://github.com/callysto/curriculum-notebooks/blob/master/LICENSE.md)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
