--- a/Technologie/ExemplesDeDonnéesOuvertes/introduction-aux-données-ouvertes.ipynb
+++ b/Technologie/ExemplesDeDonnéesOuvertes/introduction-aux-données-ouvertes.ipynb
@@ -1,1 +1,195 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["![Callysto.ca Banner](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-top.jpg?raw=true)", "\n", "\n", "<a href=\"https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcallysto%2Fcahiers-de-programmes&branch=master&subPath=/Technologie/OpenDataExamples/introduction-aux-donn\u00e9es-ouvertes.ipynb&depth=1\" target=\"_parent\"><img src=\"https://raw.githubusercontent.com/callysto/cahiers-de-programmes/master/bouton-callysto.svg?sanitize=true\" width=\"123\" height=\"24\" alt=\"Open in Callysto\"/></a>"]}, {"cell_type": "markdown", "metadata": {"lang": "fr"}, "source": ["# Introduction aux donn\u00e9es ouvertes"]}, {"cell_type": "markdown", "metadata": {}, "source": ["![open data](http://www.cybera.ca/wp-content/uploads/resizedimage400259-data02-small.jpg)"]}, {"cell_type": "markdown", "metadata": {"lang": "fr"}, "source": ["## Certains ensembles de donn\u00e9es sont-ils meilleurs que d'autres?\n", "\n", "Parlant objectivement, oui. Quelle que soit la question \u00e0 laquelle vous souhaitez r\u00e9pondre, les donn\u00e9es ouvertes ne sont pas toutes faciles \u00e0 utiliser!\n", "\n", "### Que rechercher avec les donn\u00e9es ouvertes\n", "\n", "1. Si les donn\u00e9es se trouvent dans plusieurs fichiers: est-il syst\u00e9matiquement \u00e9tiquet\u00e9, ou facile \u00e0 associer entre les fichiers?\n", "![\u00e9tiquettes de fichiers](http://www.cybera.ca/wp-content/uploads/2018/08/Open-data-notebook-label-example.png)\n", "\n", "1. Les donn\u00e9es sont-elles dans un format facile \u00e0 charger sur votre ordinateur (tel que `csv`,` txt`, `json`), ou ouvertes dans Excel?\n", "\u00a0\u00a0\u00a0\u00a0\u00a0* Un tableau HTML de site Web bien format\u00e9e fonctionne bien!\n", "\u00a0![table html](https://i.stack.imgur.com/TXh8D.png)\n", "\n", "1. Si vous examinez des donn\u00e9es spatiales: les coordonn\u00e9es GPS sont-elles d\u00e9j\u00e0 incluses (o\u00f9 pertinent)?\n", "\u00a0![coordonn\u00e9es GPS](https://blog.batchgeo.com/wp-content/uploads/2017/01/wikipedia-latitude-longitude.jpg)\n", "\n", "1. L'ensemble de donn\u00e9es est-il complet? \n", "\u00a0\u00a0\u00a0\u00a0* Si des valeurs sont manquantes, y a-t-il une bonne raison \u00e0 cela et sont-elles clairement identifi\u00e9es comme manquantes?\n", "![valeurs manquantes](https://d2vlcm61l7u1fs.cloudfront.net/media%2Fa06%2Fa06ec409-9969-49bc-ba79-ff006fb92b21%2FphpokoeJU.png)\n", "\n", "1. Les donn\u00e9es sont-elles r\u00e9guli\u00e8rement mis \u00e0 jour?\n", "\u00a0\u00a0\u00a0\u00a0* Il devrait y avoir une mention sur la page de t\u00e9l\u00e9chargement si c'est le cas, ou il devrait y avoir au moins un horodatage de la derni\u00e8re mise \u00e0 jour.\n", "\u00a0![horodatage](http://www.cybera.ca/wp-content/uploads/2018/08/whitehorse-data.jpg)\n", "\u00a0\n", "\n", "\n", "### Sources fiables\n", "Certains ensembles de donn\u00e9es en ligne sont intentionnellement trompeurs ou simplement incorrects.\n", "\n", "Tout comme toute autre source d\u2019information, les donn\u00e9es ouvertes sont \u00e9galement affect\u00e9es par les biais de son conservateur. Il est important d'essayer de trouver des sources de donn\u00e9es impartiales, ou au moins de multiples sources de donn\u00e9es pr\u00e9sentant des biais diff\u00e9rents.\n", "\n", "Par exemple, si vous cherchez \u00e0 \u00e9tudier les effets de la sant\u00e9 sur le tabac, un ensemble de donn\u00e9es fourni par une \u00e9tude financ\u00e9e par une entreprise de tabac peut avoir des r\u00e9sultats diff\u00e9rents d'une \u00e9tude ind\u00e9pendante. Soyez conscient des origines de vos donn\u00e9es avant d'en tirer des conclusions majeures!"]}, {"cell_type": "markdown", "metadata": {"lang": "fr"}, "source": ["---\n", "## Quels types d'ensembles de donn\u00e9es ouverts existe-t-il et o\u00f9 puis-je les trouver?\n", "\n", "Il existe des ensembles de donn\u00e9es ouverts disponibles sur presque tous les sujets auxquels vous pouvez penser! Un bon endroit de commencer est avec les sites gouvernementaux ou universitaires.\n", "\n", "Voici quelques portails de donn\u00e9es ouvertes pour vous aider \u00e0 d\u00e9marrer:\n", "\n", "\n", "### Donn\u00e9es gouvernementales\n", "#### Donn\u00e9es canadiennes\n", "1. [Statistique Canada](https://www150.statcan.gc.ca/n1/fr/type/data?MM=1)\n", "1. [Donn\u00e9es ouvertes du Canada](https://open.canada.ca/fr) (contient de nombreux ensembles de donn\u00e9es pour les provinces ou les territoires sans leur propre portail de donn\u00e9es ouvertes)\n", "1. [Alberta Open Data](https://open.alberta.ca/opendata)\n", "1. [BC Open Data](https://data.gov.bc.ca/)\n", "1. [Saskatchewan Open Data](http://www.opendatask.ca/)\n", "1. [Donn\u00e9es ouvertes des Territoires du Nord-Ouest](https://www.opennwt.ca/)\n", "1. [Ontario Open Data](https://www.ontario.ca/search/data-catalogue)\n", "1. [Donn\u00e9es ouvertes du Qu\u00e9bec](http://donnees.ville.quebec.qc.ca/catalogue.aspx)\n", "1. [Donn\u00e9es ouvertes de la Nouvelle-\u00c9cosse](https://data.novascotia.ca/)\n", "1. [PEI Open Data](https://data.princeedwardisland.ca/)\n", "1. [Calgary Open Data Portal](https://data.calgary.ca/)\n", "1. [Edmonton Open Data Portal](https://data.edmonton.ca/)\n", "1. [Vancouver Open Data Portal](https://vancouver.ca/your-government/open-data-catalogue.aspx)\n", "1. [Toronto Open Data Portal](https://www.toronto.ca/city-government/data-research-maps/open-data/)\n", "1. [Winnipeg Open Data Portal](https://data.winnipeg.ca/)\n", "1. [Donn\u00e9es ouvertes de Whitehorse](http://data.whitehorse.ca)\n", "\n", "_Note 1: de nombreuses villes proposent leurs propres portails de donn\u00e9es ouvertes et peuvent souvent \u00eatre trouv\u00e9es via une recherche Google de \"`CITY NAME` open data portal\"_\n", "\u00a0\u00a0\u00a0\u00a0\n", "_Note 2: Les portails de donn\u00e9es ouvertes pour les provinces et les territoires sont lanc\u00e9s continuellement au moment de la r\u00e9daction._\n", "\n", "#### Autres gouvernements\n", "1. [Donn\u00e9es ouvertes de l'UE](https://open-data.europa.eu/)\n", "1. [USA](https://www.data.gov/)\n", "1. [Australie](https://data.gov.au/)\n", "1. [NASA](https://open.nasa.gov/open-data/)\n", "1. [Russie](http://data.gov.ru/?language=fr) (le site est en anglais, mais de nombreux ensembles de donn\u00e9es sont en russe)\n", "\n", "_Note 3: Il existe de nombreux portails nationaux de donn\u00e9es ouvertes: ce ne sont que quelques-uns._\n", "\n", "\u00a0\u00a0\u00a0\u00a0\n", "### Agr\u00e9gateurs de donn\u00e9es\n", "1. [Kaggle](https://www.kaggle.com/datasets)\n", "1. [Open Data Soft](https://data.opendatasoft.com/pages/home/)\n", "1. [Open Africa](https://africaopendata.org/)\n", "1. [Liste d'ensembles de donn\u00e9es int\u00e9ressants](https://github.com/awesomedata/awesome-public-datasets)\n", "1. [Open Data Network](https://www.opendatanetwork.com/) (parlant techniquement, il s'agit d'un moteur de recherche d'ensembles de donn\u00e9es)\n", "1. [Google Public Data](https://www.google.com/publicdata/directory)\n", "\n", "---\n", "\n", "Ceci n'est en aucun cas une liste exhaustive - si vous cherchez quelque chose de plus sp\u00e9cifique, il est assez facile de le trouver avec une simple recherche en ligne!\n", "\n", "## Travailler avec des donn\u00e9es ouvertes\n", "\n", "Voil\u00e0 notre s\u00e9rie d'exemples de donn\u00e9es ouvertes!\n", "\n", "1. [Donn\u00e9es de kilom\u00e9trage de voiture partie 1](kilom\u00e9trage-de-voiture-1.ipynb)\n", "2. [Donn\u00e9es de kilom\u00e9trage de voiture partie 2](kilom\u00e9trage-de-voiture-2.ipynb)\n", "3. [Lotto 649 donn\u00e9es ouvertes](loterie.ipynb)\n", "4. [Atterrissages de m\u00e9t\u00e9orites et chutes partie 1](m\u00e9t\u00e9orites-1.ipynb)\n", "5. [Atterrissages de m\u00e9t\u00e9orites et chutes partie 2](m\u00e9t\u00e9orites-2.ipynb)"]}, {"cell_type": "markdown", "metadata": {}, "source": ["[![Callysto.ca License](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-bottom.jpg?raw=true)](https://github.com/callysto/curriculum-notebooks/blob/master/LICENSE.md)"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.3"}, "latex_envs": {"LaTeX_envs_menu_present": true, "autoclose": false, "autocomplete": true, "bibliofile": "biblio.bib", "cite_by": "apalike", "current_citInitial": 1, "eqLabelWithNumbers": true, "eqNumInitial": 1, "hotkeys": {"equation": "Ctrl-E", "itemize": "Ctrl-I"}, "labels_anchors": false, "latex_user_defs": false, "report_style_numbering": false, "user_envs_cfg": false}, "nbTranslate": {"displayLangs": ["*"], "hotkey": "alt-t", "langInMainMenu": true, "sourceLang": "en", "targetLang": "fr", "useGoogleTranslate": true}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Callysto.ca Banner](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-top.jpg?raw=true)\n",
+    "\n",
+    "<a href=\"https://hub.callysto.ca/jupyter/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fcallysto%2Fcahiers-de-programmes&branch=master&urlpath=notebooks/cahiers-de-programmes/Technologie/ExemplesDeDonn%C3%A9esOuvertes/introduction-aux-donn%C3%A9es-ouvertes.ipynb&depth=1\" target=\"_parent\"><img src=\"https://raw.githubusercontent.com/callysto/cahiers-de-programmes/master/bouton-callysto.svg?sanitize=true\" width=\"123\" height=\"24\" alt=\"Open in Callysto\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lang": "fr"
+   },
+   "source": [
+    "# Introduction aux données ouvertes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![open data](http://www.cybera.ca/wp-content/uploads/resizedimage400259-data02-small.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lang": "fr"
+   },
+   "source": [
+    "## Certains ensembles de données sont-ils meilleurs que d'autres?\n",
+    "\n",
+    "Parlant objectivement, oui. Quelle que soit la question à laquelle vous souhaitez répondre, les données ouvertes ne sont pas toutes faciles à utiliser!\n",
+    "\n",
+    "### Que rechercher avec les données ouvertes\n",
+    "\n",
+    "1. Si les données se trouvent dans plusieurs fichiers: est-il systématiquement étiqueté, ou facile à associer entre les fichiers?\n",
+    "![étiquettes de fichiers](http://www.cybera.ca/wp-content/uploads/2018/08/Open-data-notebook-label-example.png)\n",
+    "\n",
+    "1. Les données sont-elles dans un format facile à charger sur votre ordinateur (tel que `csv`,` txt`, `json`), ou ouvertes dans Excel?\n",
+    "     * Un tableau HTML de site Web bien formatée fonctionne bien!\n",
+    " ![table html](https://i.stack.imgur.com/TXh8D.png)\n",
+    "\n",
+    "1. Si vous examinez des données spatiales: les coordonnées GPS sont-elles déjà incluses (où pertinent)?\n",
+    " ![coordonnées GPS](https://blog.batchgeo.com/wp-content/uploads/2017/01/wikipedia-latitude-longitude.jpg)\n",
+    "\n",
+    "1. L'ensemble de données est-il complet? \n",
+    "    * Si des valeurs sont manquantes, y a-t-il une bonne raison à cela et sont-elles clairement identifiées comme manquantes?\n",
+    "![valeurs manquantes](https://d2vlcm61l7u1fs.cloudfront.net/media%2Fa06%2Fa06ec409-9969-49bc-ba79-ff006fb92b21%2FphpokoeJU.png)\n",
+    "\n",
+    "1. Les données sont-elles régulièrement mis à jour?\n",
+    "    * Il devrait y avoir une mention sur la page de téléchargement si c'est le cas, ou il devrait y avoir au moins un horodatage de la dernière mise à jour.\n",
+    " ![horodatage](http://www.cybera.ca/wp-content/uploads/2018/08/whitehorse-data.jpg)\n",
+    " \n",
+    "\n",
+    "\n",
+    "### Sources fiables\n",
+    "Certains ensembles de données en ligne sont intentionnellement trompeurs ou simplement incorrects.\n",
+    "\n",
+    "Tout comme toute autre source d’information, les données ouvertes sont également affectées par les biais de son conservateur. Il est important d'essayer de trouver des sources de données impartiales, ou au moins de multiples sources de données présentant des biais différents.\n",
+    "\n",
+    "Par exemple, si vous cherchez à étudier les effets de la santé sur le tabac, un ensemble de données fourni par une étude financée par une entreprise de tabac peut avoir des résultats différents d'une étude indépendante. Soyez conscient des origines de vos données avant d'en tirer des conclusions majeures!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "lang": "fr"
+   },
+   "source": [
+    "---\n",
+    "## Quels types d'ensembles de données ouverts existe-t-il et où puis-je les trouver?\n",
+    "\n",
+    "Il existe des ensembles de données ouverts disponibles sur presque tous les sujets auxquels vous pouvez penser! Un bon endroit de commencer est avec les sites gouvernementaux ou universitaires.\n",
+    "\n",
+    "Voici quelques portails de données ouvertes pour vous aider à démarrer:\n",
+    "\n",
+    "\n",
+    "### Données gouvernementales\n",
+    "#### Données canadiennes\n",
+    "1. [Statistique Canada](https://www150.statcan.gc.ca/n1/fr/type/data?MM=1)\n",
+    "1. [Données ouvertes du Canada](https://open.canada.ca/fr) (contient de nombreux ensembles de données pour les provinces ou les territoires sans leur propre portail de données ouvertes)\n",
+    "1. [Alberta Open Data](https://open.alberta.ca/opendata)\n",
+    "1. [BC Open Data](https://data.gov.bc.ca/)\n",
+    "1. [Saskatchewan Open Data](http://www.opendatask.ca/)\n",
+    "1. [Données ouvertes des Territoires du Nord-Ouest](https://www.opennwt.ca/)\n",
+    "1. [Ontario Open Data](https://www.ontario.ca/search/data-catalogue)\n",
+    "1. [Données ouvertes du Québec](http://donnees.ville.quebec.qc.ca/catalogue.aspx)\n",
+    "1. [Données ouvertes de la Nouvelle-Écosse](https://data.novascotia.ca/)\n",
+    "1. [PEI Open Data](https://data.princeedwardisland.ca/)\n",
+    "1. [Calgary Open Data Portal](https://data.calgary.ca/)\n",
+    "1. [Edmonton Open Data Portal](https://data.edmonton.ca/)\n",
+    "1. [Vancouver Open Data Portal](https://vancouver.ca/your-government/open-data-catalogue.aspx)\n",
+    "1. [Toronto Open Data Portal](https://www.toronto.ca/city-government/data-research-maps/open-data/)\n",
+    "1. [Winnipeg Open Data Portal](https://data.winnipeg.ca/)\n",
+    "1. [Données ouvertes de Whitehorse](http://data.whitehorse.ca)\n",
+    "\n",
+    "_Note 1: de nombreuses villes proposent leurs propres portails de données ouvertes et peuvent souvent être trouvées via une recherche Google de \"`CITY NAME` open data portal\"_\n",
+    "    \n",
+    "_Note 2: Les portails de données ouvertes pour les provinces et les territoires sont lancés continuellement au moment de la rédaction._\n",
+    "\n",
+    "#### Autres gouvernements\n",
+    "1. [Données ouvertes de l'UE](https://open-data.europa.eu/)\n",
+    "1. [USA](https://www.data.gov/)\n",
+    "1. [Australie](https://data.gov.au/)\n",
+    "1. [NASA](https://open.nasa.gov/open-data/)\n",
+    "1. [Russie](http://data.gov.ru/?language=fr) (le site est en anglais, mais de nombreux ensembles de données sont en russe)\n",
+    "\n",
+    "_Note 3: Il existe de nombreux portails nationaux de données ouvertes: ce ne sont que quelques-uns._\n",
+    "\n",
+    "    \n",
+    "### Agrégateurs de données\n",
+    "1. [Kaggle](https://www.kaggle.com/datasets)\n",
+    "1. [Open Data Soft](https://data.opendatasoft.com/pages/home/)\n",
+    "1. [Open Africa](https://africaopendata.org/)\n",
+    "1. [Liste d'ensembles de données intéressants](https://github.com/awesomedata/awesome-public-datasets)\n",
+    "1. [Open Data Network](https://www.opendatanetwork.com/) (parlant techniquement, il s'agit d'un moteur de recherche d'ensembles de données)\n",
+    "1. [Google Public Data](https://www.google.com/publicdata/directory)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Ceci n'est en aucun cas une liste exhaustive - si vous cherchez quelque chose de plus spécifique, il est assez facile de le trouver avec une simple recherche en ligne!\n",
+    "\n",
+    "## Travailler avec des données ouvertes\n",
+    "\n",
+    "Voilà notre série d'exemples de données ouvertes!\n",
+    "\n",
+    "1. [Données de kilométrage de voiture partie 1](kilométrage-de-voiture-1.ipynb)\n",
+    "2. [Données de kilométrage de voiture partie 2](kilométrage-de-voiture-2.ipynb)\n",
+    "3. [Lotto 649 données ouvertes](loterie.ipynb)\n",
+    "4. [Atterrissages de météorites et chutes partie 1](météorites-1.ipynb)\n",
+    "5. [Atterrissages de météorites et chutes partie 2](météorites-2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Callysto.ca License](https://github.com/callysto/curriculum-notebooks/blob/master/callysto-notebook-banner-bottom.jpg?raw=true)](https://github.com/callysto/curriculum-notebooks/blob/master/LICENSE.md)"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
