Correction du code et de certains mots

--- a/Science/ChangementClimatique/changement-climatique.ipynb
+++ b/Science/ChangementClimatique/changement-climatique.ipynb
@@ -19,34 +19,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%html\n",
-    "\n",
-    "<script>\n",
-    "  function code_toggle() {\n",
-    "    if (code_shown){\n",
-    "      $('div.input').hide('500');\n",
-    "      $('#toggleButton').val('Show Code')\n",
-    "    } else {\n",
-    "      $('div.input').show('500');\n",
-    "      $('#toggleButton').val('Hide Code')\n",
-    "    }\n",
-    "    code_shown = !code_shown\n",
-    "  }\n",
-    "\n",
-    "  $( document ).ready(function(){\n",
-    "    code_shown=false;\n",
-    "    $('div.input').hide()\n",
-    "  });\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Afficher le code\"></form>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "lang": "fr"
@@ -130,11 +102,18 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "from plotly.offline import init_notebook_mode, iplot\n",
+    "import matplotlib.animation as animation\n",
+    "%matplotlib inline\n",
     "import plotly.graph_objs as go\n",
-    "from plotly.graph_objs import *"
+    "import cartopy.crs as ccrs\n",
+    "import imageio\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from datetime import timedelta, datetime\n",
+    "from IPython.display import Image\n",
+    "\n",
+    "print('Code importé')"
    ]
   },
   {
@@ -143,48 +122,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://climate.nasa.gov/system/internal_resources/details/original/647_Global_Temperature_Data_File.txt'\n",
-    "global_temperature_df = pd.read_table(url, sep='\\s+', header=None, names=['Year','Annual Mean', 'Lowess smoothing'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "global_temperature_df.tail(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_notebook_mode(connected=True)\n",
+    "climate_data_url = 'https://climate.nasa.gov/system/internal_resources/details/original/647_Global_Temperature_Data_File.txt'\n",
+    "global_temperature_df = pd.read_csv(climate_data_url, sep='\\s+', skiprows=[0, 1, 2, 4])\n",
+    "global_temperature_df.rename(columns={'No_Smoothing':'Annual Mean', 'Lowess(5)':'Lowess Smoothing'}, inplace=True)\n",
     "\n",
     "trace0 = go.Scatter(\n",
     "    x = global_temperature_df['Year'],\n",
     "    y = global_temperature_df['Annual Mean'],\n",
     "    mode = 'lines+markers',\n",
-    "    name = 'Annual Mean'\n",
+    "    name = 'Moyenne annuelle'\n",
     ")\n",
     "\n",
     "trace1 = go.Scatter(\n",
     "    x = global_temperature_df['Year'],\n",
-    "    y = global_temperature_df['Lowess smoothing'],\n",
+    "    y = global_temperature_df['Lowess Smoothing'],\n",
     "    mode = 'lines+markers',\n",
-    "    name = 'Lowess smoothing'\n",
+    "    name = 'Lissage Lowess'\n",
     ")\n",
     "\n",
     "data = [trace0,trace1]\n",
-    "layout = go.Layout(dict(title='Global Land Ocean Temperature Index'),\n",
-    "                   xaxis=dict(title='Year'),\n",
-    "                   yaxis=dict(title='Temperature Anomaly')\n",
+    "layout = go.Layout(dict(title='Indice mondial de température terre-océan'),\n",
+    "                   xaxis=dict(title='An'),\n",
+    "                   yaxis=dict(title='Anomalie de température')\n",
     ")\n",
     "fig = go.Figure(data=data,layout=layout)\n",
-    "iplot(fig)"
+    "fig.show()"
    ]
   },
   {
@@ -193,15 +155,8 @@
     "lang": "fr"
    },
    "source": [
-    "Ce graphique illustre l'évolution de la température de surface mondiale par rapport aux températures moyennes de 1951-1980. Dix-sept des 18 années les plus chaudes du record de 136 ans se sont produites depuis 2001, à l'exception de 1998. L'année 2016 est la plus chaude jamais enregistrée."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
+    "Ce graphique illustre l'évolution de la température de surface mondiale par rapport aux températures moyennes de 1951-1980. Dix-sept des 18 années les plus chaudes du record de 136 ans se sont produites depuis 2001, à l'exception de 1998. L'année 2016 est la plus chaude jamais enregistrée.\n",
+    "\n",
     "En regardant le graphique ci-dessus et en visionnant la vidéo, on peut voir que 2016 a été l'année la plus chaude depuis le début de la tenue des registres."
    ]
   },
@@ -243,16 +198,7 @@
    "outputs": [],
    "source": [
     "url = 'https://climate.nasa.gov/system/internal_resources/details/original/1270_minimum_extents_and_area_north_SBA_reg_20171001_2_.txt'\n",
-    "\n",
-    "arctic_ice_df = pd.read_table(url, sep='\\s+', skiprows=[0,1,2,3],header=None, names=['Year', 'MN', 'DY', 'Ice Extent', 'Year1', 'MN1', 'DY1', 'Ice Area'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "arctic_ice_df = pd.read_csv(url, sep='\\s+', skiprows=[0,1,2,3],header=None, names=['An', 'MN', 'DY', 'Étendue de glace', 'An1', 'MN1', 'DY1', 'Zone de glace'])\n",
     "arctic_ice_df.head(10)"
    ]
   },
@@ -262,30 +208,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_notebook_mode(connected=True)\n",
-    "\n",
     "trace0 = go.Scatter(\n",
-    "    x = arctic_ice_df['Year'],\n",
-    "    y = arctic_ice_df['Ice Extent'],\n",
+    "    x = arctic_ice_df['An'],\n",
+    "    y = arctic_ice_df['Étendue de glace'],\n",
     "    mode = 'lines+markers',\n",
-    "    name = 'Ice Extent'\n",
+    "    name = 'Étendue de glace'\n",
     ")\n",
     "\n",
     "trace1 = go.Scatter(\n",
-    "x = arctic_ice_df['Year'],\n",
-    "y = arctic_ice_df['Ice Area'],\n",
+    "x = arctic_ice_df['An'],\n",
+    "y = arctic_ice_df['Zone de glace'],\n",
     "mode = 'lines+markers',\n",
-    "#opacity = 0.5,\n",
-    "name='Ice Area',\n",
-    "#hoverinfo = 'none'\n",
+    "name='Zone de glace',\n",
     ")\n",
     "data = [trace0, trace1]\n",
-    "layout = go.Layout(dict(title='Arctic Sea Ice Index'),\n",
-    "                   xaxis=dict(title='Year'),\n",
-    "                   yaxis=dict(title='Million Square Kms')\n",
+    "layout = go.Layout(dict(title=\"Indice de glace de mer de l'Arctique\"),\n",
+    "                   xaxis=dict(title='An'),\n",
+    "                   yaxis=dict(title='Millions de kilomètres carrés')\n",
     ")\n",
     "fig = go.Figure(data=data,layout=layout)\n",
-    "iplot(fig)"
+    "fig.show()"
    ]
   },
   {
@@ -305,9 +247,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import numpy.ma as ma\n",
-    "\n",
     "sea_ice = ['./data/nt_20150418_f17_nrt_n.bin','./data/nt_20160331_f17_nrt_n.bin','./data/nt_20170418_f18_nrt_n.bin','./data/nt_20180423_f18_nrt_n.bin']\n",
     "\n",
     "def prepare_data(ice_data):\n",
@@ -319,24 +258,11 @@
     "\n",
     "    ice = ice / 250.\n",
     "\n",
-    "    ice = ma.masked_greater(ice, 1.0)\n",
+    "    ice = np.ma.masked_greater(ice, 1.0)\n",
     "    dx = dy = 25000\n",
     "    x = np.arange(-3850000, +3750000, +dx)\n",
     "    y = np.arange(+5850000, -5350000, -dy)\n",
-    "    return x, y, ice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.animation as animation\n",
+    "    return x, y, ice\n",
     "\n",
     "fig = plt.figure(figsize=(9,9))\n",
     "ax = plt.axes(projection=ccrs.NorthPolarStereo(central_longitude=0))\n",
@@ -350,19 +276,9 @@
     "    cs = ax.pcolormesh(x, y, ice, cmap=plt.cm.Blues,\n",
     "                   transform=ccrs.Stereographic(**kw))\n",
     "    fig.suptitle(\"April %s\" %(i))\n",
-    "    fig.savefig(f'frames/frame_{i}.png', dpi=100, frameon=False, facecolor='white')\n",
+    "    fig.savefig(f'frames/frame_{i}.png', dpi=100, facecolor='white')\n",
     "    i+=1   \n",
-    "plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import imageio\n",
-    "import os\n",
+    "plt.close(fig)\n",
     "\n",
     "png_dir = \"./frames/\"\n",
     "images = []\n",
@@ -373,7 +289,10 @@
     "        if file_path.endswith(\".png\"):\n",
     "            images.append(imageio.imread(file_path))\n",
     "kargs = { 'duration': 2 }\n",
-    "imageio.mimsave('./gif/ice_concentration.gif', images, **kargs)"
+    "imageio.mimsave('./gif/ice_concentration.gif', images, **kargs)\n",
+    "\n",
+    "image_animation = Image('gif/ice_concentration.gif')\n",
+    "image_animation"
    ]
   },
   {
@@ -383,13 +302,6 @@
    },
    "source": [
     "Ce GIF montre la visualisation des données de concentration de glace de mer prises au mois d’avril dans les années 2015 à 2018. On peut clairement voir la réduction de l’étendue de la glace de mer entre ces années."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![Sea Ice concentration](./gif/ice_concentration.gif)"
    ]
   },
   {
@@ -436,76 +348,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ftplib import FTP\n",
-    "import re\n",
-    "ftp_server = 'podaac.jpl.nasa.gov'\n",
-    "directory = '/allData/merged_alt/L2/TP_J1_OSTM/global_mean_sea_level/'\n",
-    "# Connecting to FTP server\n",
-    "ftp = FTP(ftp_server)\n",
-    "# Logging in to the ftp server (no login credentials required)\n",
-    "ftp.login()\n",
-    "# Changing the current working directory to the global mean sea level data directory\n",
-    "ftp.cwd(directory)\n",
-    "\n",
-    "# Looping over all the existing files to find the GSML data file and reading it into a panda dataframe\n",
-    "for f in ftp.nlst():\n",
-    "    if re.match(r\"GMSL_TPJAOS(.*).txt\",f):\n",
-    "        url = 'ftp://'+ftp_server+directory+f\n",
-    "        print(\"Gathering data from\", url)\n",
-    "        sea_level_df = pd.read_table(url, sep='\\s+', comment='H', header=None, usecols=[2,11], names=['Date','GMSL_variation'])\n",
-    "ftp.quit();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import timedelta, datetime\n",
+    "sea_level_url = 'https://www.star.nesdis.noaa.gov/sod/lsa/SeaLevelRise/slr/slr_sla_gbl_keep_all_66.csv' \n",
+    "sea_level_df = pd.read_csv(sea_level_url, sep=',', skiprows=[0,1,2,3,4,5],header=None, names=['Year', 'TP', 'Jason-1', 'Jason-2', 'Jason-3'])\n",
     "\n",
     "def convert_partial_year(number):\n",
-    "\n",
     "    year = int(number)\n",
     "    d = timedelta(days=(number - year)*365)\n",
     "    day_one = datetime(year,1,1)\n",
     "    date = d + day_one\n",
     "    return date\n",
     "\n",
-    "sea_level_df['Date'] = sea_level_df['Date'].apply(convert_partial_year)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sea_level_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_notebook_mode(connected=True)\n",
+    "sea_level_df['Date'] = sea_level_df['Year'].apply(convert_partial_year)\n",
     "\n",
     "trace0 = go.Scatter(\n",
     "    x = sea_level_df['Date'],\n",
-    "    y = sea_level_df['GMSL_variation']-sea_level_df['GMSL_variation'][1],\n",
-    "    mode = 'lines',\n",
-    "    name = 'Global Mean Sea level (GMSL) variation'\n",
+    "    y = sea_level_df['TP'],\n",
+    "    mode = 'lines+markers',\n",
+    "    name = 'TOPEX-Poseiden'\n",
     ")\n",
     "\n",
-    "data = [trace0]\n",
-    "layout = go.Layout(dict(title='Global Mean Sea level (GMSL) variation'),\n",
-    "                   xaxis=dict(title='Year'),\n",
-    "                   yaxis=dict(title='Sea height variation (mm)')\n",
+    "trace1 = go.Scatter(\n",
+    "    x = sea_level_df['Date'],\n",
+    "    y = sea_level_df['Jason-1'],\n",
+    "    mode = 'lines+markers',\n",
+    "    name = 'Jason-1'\n",
+    ")\n",
+    "\n",
+    "trace2 = go.Scatter(\n",
+    "    x = sea_level_df['Date'],\n",
+    "    y = sea_level_df['Jason-2'],\n",
+    "    mode = 'lines+markers',\n",
+    "    name = 'Jason-2'\n",
+    ")\n",
+    "\n",
+    "trace3 = go.Scatter(\n",
+    "    x = sea_level_df['Date'],\n",
+    "    y = sea_level_df['Jason-3'],\n",
+    "    mode = 'lines+markers',\n",
+    "    name = 'Jason-3'\n",
+    ")\n",
+    "\n",
+    "data = [trace0,trace1,trace2,trace3]\n",
+    "layout = go.Layout(dict(title='Changement du niveau moyen mondial de la mer par altimétrie par satellite'),\n",
+    "                   xaxis=dict(title='Date'),\n",
+    "                   yaxis=dict(title='Changement du niveau moyen de la mer (mm)')\n",
     ")\n",
     "fig = go.Figure(data=data,layout=layout)\n",
-    "iplot(fig)"
+    "fig.show()"
    ]
   },
   {
@@ -514,15 +403,8 @@
     "lang": "fr"
    },
    "source": [
-    "### Questions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
+    "### Questions\n",
+    "\n",
     "#### Anomalies de température enregistrées au Canada:\n",
     "\n",
     "Le graphique ci-dessous illustre les écarts de température annuels moyens au Canada de 1948 à 2014, comparé à la valeur de référence de 1961-1990 (ou les températures moyennes enregistrées entre 1961 et 1990). Les données proviennent du portail de données ouvertes du gouvernement du Canada:  https://open.canada.ca/data/en/dataset/49118c5d-850c-40bd-af75-4f47650a9800\n",
@@ -536,43 +418,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ca_url = 'https://www.canada.ca/content/dam/eccc/migration/main/indicateurs-indicators/64c9e931-fcc6-4df6-ad44-c2b0236fe255/temperaturechange_en.csv'\n",
-    "\n",
-    "ca_df = pd.read_table(ca_url, sep=\",\", skiprows=[0,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "init_notebook_mode(connected=True)\n",
+    "ca_url = 'https://www.canada.ca/content/dam/eccc/documents/csv/cesindicators/temperature-change/2019/Temperature-change-annual-en.csv'\n",
+    "ca_df = pd.read_csv(ca_url, encoding='iso-8859-1', skiprows=[0,1,74,75,76,77])\n",
     "\n",
     "trace0 = go.Scatter(\n",
     "    x = ca_df['Year'],\n",
-    "    y = ca_df['Temperature departure (degrees Celsius)'],\n",
+    "    y = ca_df['Temperature departure (degree Celsius)'],\n",
     "    mode = 'lines+markers',\n",
-    "    name = 'Annual Mean'\n",
+    "    name = 'Moyenne annuelle'\n",
     ")\n",
     "\n",
     "trace1 = go.Scatter(\n",
     "x = ca_df['Year'],\n",
-    "y = [0]*len(ca_df['Temperature departure (degrees Celsius)']),\n",
+    "y = [0]*len(ca_df['Temperature departure (degree Celsius)']),\n",
     "mode = 'lines',\n",
-    "#opacity = 0.5,\n",
-    "name='Reference value',\n",
+    "opacity = 0.5,\n",
+    "name='Valeur de référence',\n",
     "hoverinfo = 'none'\n",
     ")\n",
     "data = [trace0, trace1]\n",
-    "layout = go.Layout(dict(title='Annual Average temperature departures in Canada'),\n",
-    "                   xaxis=dict(title='Year'),\n",
-    "                   yaxis=dict(title='Temperature Anomaly')\n",
+    "layout = go.Layout(dict(title='Variation de la température moyenne annuelle au Canada'),\n",
+    "                   xaxis=dict(title='Date'),\n",
+    "                   yaxis=dict(title='Écart de température (Celsius)')\n",
     ")\n",
     "fig = go.Figure(data=data,layout=layout)\n",
-    "iplot(fig)"
+    "fig.show()"
    ]
   },
   {
