--- a/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
+++ b/Science/ConductivitéÉlectrique/conductivité-électrique.ipynb
@@ -15,11 +15,11 @@
     "lang": "fr"
    },
    "source": [
-    "<img src=\"images/conductivity.jpg\" width=\"500px\" />\n",
+    "<img src=\"images/iStock-conductivity.jpg\" width=\"500px\" />\n",
     "\n",
     "# Conductivité électrique\n",
     "\n",
-    "Basé sur l'expérience de la bibliothèque LibreTexts intitulée \"Conductivité électrique des solutions aqueuses\" publiée sous licence [Creative Commons Attribution-NonCommercial-ShareAlike 3.0 États-Unis] (https://creativecommons.org/licenses/by-nc-sa/3.0/us/) "
+    "Basé sur l'expérience de la bibliothèque LibreTexts \"[Electrical Conductivity of Aqueous Solutions]()\" publiée sous licence [Creative Commons Attribution-NonCommercial-ShareAlike 3.0 États-Unis](https://creativecommons.org/licenses/by-nc-sa/3.0/us/) ."
    ]
   },
   {
@@ -94,35 +94,9 @@
     "3. Placez les embouts métalliques de votre testeur de conductivité dans la solution.\n",
     "4. Notez la conductivité de l'eau distillée dans le tableau ci-dessous.\n",
     "5. Répétez les étapes 1 à 4 avec des échantillons des autres solutions. Par exemple, prenez une cuillerée de sel et dissolvez-la dans l'eau. Après chaque mesure de conductivité, videz le bécher et rincez-le avec de l'eau distillée.\n",
-    "6. Nettoyez quand vous avez terminé."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%html\n",
+    "6. Nettoyez quand vous avez terminé.\n",
     "\n",
-    "<script>\n",
-    "  function code_toggle() {\n",
-    "    if (code_shown){\n",
-    "      $('div.input').hide('500');\n",
-    "      $('#toggleButton').val('Show Code')\n",
-    "    } else {\n",
-    "      $('div.input').show('500');\n",
-    "      $('#toggleButton').val('Hide Code')\n",
-    "    }\n",
-    "    code_shown = !code_shown\n",
-    "  }\n",
-    "  \n",
-    "  $( document ).ready(function(){\n",
-    "    code_shown=false;\n",
-    "    $('div.input').hide()\n",
-    "  });\n",
-    "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
+    "Sélectionnez la cellule de code suivante, puis cliquez sur le bouton `▶Run` pour afficher un tableau de données pour enregistrer vos observations. Si vous obtenez une erreur, supprimez le `#` de la première ligne de code et exécutez-le à nouveau. Double-cliquez sur les valeurs `nan` pour insérer vos propres observations."
    ]
   },
   {
@@ -134,12 +108,22 @@
    },
    "outputs": [],
    "source": [
+    "#!pip install qgrid --user --upgrade\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import qgrid\n",
-    "df = pd.DataFrame(index=pd.Series(['Distilled Water', 'Tap Water', 'Salt Water', 'Vinegar']), columns=pd.Series(['Reading 1', 'Reading 2','Notes']))\n",
-    "df_widget = qgrid.QgridWidget(df =df, show_toolbar=True)\n",
-    "df_widget"
+    "rows = ['Distilled Water', 'Tap Water', 'Salt Water', 'Vinegar']\n",
+    "columns = ['Reading 1', 'Reading 2', 'Notes']\n",
+    "df = pd.DataFrame(index=rows, columns=columns)\n",
+    "data_entry_table = qgrid.QgridWidget(df=df, show_toolbar=True)\n",
+    "data_entry_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Après avoir enregistré vos observations dans le tableau ci-dessus, `▶Run` la cellule suivante pour enregistrer et afficher vos données."
    ]
   },
   {
@@ -148,24 +132,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import Javascript, display\n",
-    "from ipywidgets import widgets\n",
-    "\n",
-    "def run_all(ev):\n",
-    "    display(Javascript('IPython.notebook.execute_cell_range(IPython.notebook.get_selected_index()+1,IPython.notebook.get_selected_index()+2)'))\n",
-    "\n",
-    "button = widgets.Button(description=\"Click to save data\")\n",
-    "button.on_click(run_all)\n",
-    "display(button)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_data = df_widget.get_changed_df()"
+    "data = data_entry_table.get_changed_df()\n",
+    "data['Average'] = (data['Reading 1'].astype(int)+data['Reading 1'].astype(int))/1\n",
+    "data"
    ]
   },
   {
@@ -200,10 +169,11 @@
     "lang": "fr"
    },
    "source": [
-    "## Conductivité dans votre quartier\n",
+    "## Comparé aux usines de traitement de l'eau\n",
+    "\n",
     "La conductivité électrique peut être un indicateur important de ce qui est présent dans une solution donnée. La conductivité augmente lorsque plus d'ions sont dissous dans l'eau. Par conséquent, le niveau de conductivité peut être utilisé comme indicateur de la qualité de l'eau. Par exemple, les usines de traitement de l'eau qui traitent l'eau de mer et la transforment en eau utilisable utilisent la conductivité comme indicateur du degré d'élimination du sel de l'eau. Dans ce cas, un certain niveau de conductivité est défini comme valeur limite pour la quantité de sel autorisée dans l'eau avant de pouvoir être utilisée dans une maison ou une exploitation minière.\n",
     "\n",
-    "Le tableau ci-dessous montre les lectures de la station d'épuration des eaux Epcor de Rossdale à Edmonton au cours de la dernière semaine. Cette statio alimente le centre-ville d'Edmonton et la région ELS, couvrant le nord-ouest, l'ouest et le sud-ouest. Notez que l'un des indicateurs de qualité indiqués ci-dessous est la conductivité!"
+    "Exécutez la cellule suivante pour télécharger les données de deux usines de traitement de l'eau, Rossdale et E.L. Smith, pour la semaine dernière et tracez un graphique de la conductivité de l'eau par rapport à vos données."
    ]
   },
   {
@@ -214,69 +184,16 @@
    },
    "outputs": [],
    "source": [
-    "url_ELS = \"http://apps.epcor.ca/DAilyWaterQuality/Default.aspx?zone=ELS\"\n",
-    "url_RD = \"http://apps.epcor.ca/DAilyWaterQuality/Default.aspx?zone=Rossdale\"\n",
-    "table_RD = pd.read_html(url_RD, header=0)\n",
-    "table_ELS = pd.read_html(url_ELS, header=0)\n",
-    "qgrid.QgridWidget(df = table_RD[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "lang": "fr"
-   },
-   "source": [
-    "Nous avons pris les données des usines de traitement de l'eau ainsi que les lectures de votre expérience et nous avons représenté la conductivité dans le graphique ci-dessous."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "button = widgets.Button(description=\"Update the plot\")\n",
-    "button.on_click(run_all)\n",
-    "display(button)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import Normalize\n",
-    "import matplotlib.cm as cm\n",
-    "import warnings\n",
-    "# ignoring runtime warning from taking the mean of a single number\n",
-    "# this also catches strings. \n",
-    "np.warnings.filterwarnings('ignore')\n",
-    "cmap = cm.Set1\n",
-    "\n",
-    "norm=Normalize(vmin=0, vmax=len(output_data.index)+1)\n",
-    "\n",
-    "for i in range(len(output_data.index)): \n",
-    "    try:\n",
-    "        sample_mean=np.nanmean([float(output_data.iloc[i,0]),float(output_data.iloc[i,1])])\n",
-    "        plt.axhline(y=sample_mean, c=cmap(norm(i)), ls='dashed', label='Average of ' + output_data.index[i], lw='3')\n",
-    "\n",
-    "    except ValueError as e:\n",
-    "        # skip data that has strings in it. \n",
-    "        continue\n",
-    "\n",
-    "\n",
-    "plt.plot(table_RD[0].iloc[6, 1:8], 'bo-', label='Rossdale readings')\n",
-    "#plt.plot(pd.DataFrame(table_RD[0].iloc[6, 1:8].apply(pd.to_numeric)))\n",
-    "plt.xlabel('Day of Measurement')\n",
-    "plt.ylabel('Conductivity (yS/cm)')\n",
-    "plt.title('Conductivity in treated waste water over the last week')\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2)\n",
-    "plt.show()"
+    "rossdale = pd.read_html('http://apps.epcor.ca/DailyWaterQuality/Default.aspx?zone=Rossdale', header=0)[0]\n",
+    "els = pd.read_html('http://apps.epcor.ca/DailyWaterQuality/Default.aspx?zone=ELS', header=0)[0]\n",
+    "import cufflinks as cf\n",
+    "cf.go_offline()\n",
+    "combined_data = pd.DataFrame()\n",
+    "combined_data['Rossdale'] = rossdale.iloc[6][1:]\n",
+    "combined_data['ELS'] = els.iloc[6][1:]\n",
+    "for i, row in data.iterrows():\n",
+    "    combined_data[row.name] = row['Average']\n",
+    "combined_data.iplot(yTitle='Conductivité (yS/cm)', title=\"Conductivité des solutions par rapport aux données des usines de traitement d'eau\")"
    ]
   },
   {
