Changer la formulation

--- a/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
+++ b/Mathématiques/PointBasculeEmplois/point-de-bascule-et-l'emploi.ipynb
@@ -44,9 +44,13 @@
     "\n",
     "**Quel emploi devriez-vous choisir?** Voyons combien chaque emploi vous paie.\n",
     "\n",
-    "1. Acme offre un salaire de base de 1200 $\\$$ par mois, ainsi qu'une commission de 3 \\% pour chaque vente de plus de 1000 $\\$$. \n",
-    "2. Bigby offre un salaire de base de 250 $\\$$ par mois, ainsi qu'une commission de 18 \\% pour chaque vente.\n",
-    " \n",
+    "1. Acme paie un salaire de base de 1200 $\\$$ ainsi que 3 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
+    "\n",
+    "    *Acme salaire* = 1200 + (*vents* - 1000) $\\times$ 0.03\n",
+    "    \n",
+    "2. En même temps, Bigby paie un salaire de base de 250 $\\$$ ainsi que 18 \\% pour les ventes. Nous pouvons écrire cette formula comme suit\n",
+    "    \n",
+    "    *Bigby salaire* = 250 + *vents* $\\times$ 0.18\n",
     " \n",
     "**Votre tâche:** Déterminez quel emploi vous paie le mieux."
    ]
